[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/proof/module/module_box.gd" type="Script" id=1]

[node name="Module" type="MarginContainer"]
margin_right = 150.0
margin_bottom = 274.0
rect_min_size = Vector2( 250, 0 )
rect_clip_content = true
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 247.0
margin_bottom = 271.0
rect_clip_content = false
size_flags_horizontal = 3

[node name="Control" type="MarginContainer" parent="ScrollContainer"]
margin_right = 244.0
margin_bottom = 139.0
size_flags_horizontal = 3
custom_constants/margin_right = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/Control"]
margin_right = 236.0
margin_bottom = 139.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModuleName" type="Label" parent="ScrollContainer/Control/VBoxContainer"]
margin_right = 236.0
margin_bottom = 17.0
text = "TODO: Module Name"

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/Control/VBoxContainer"]
margin_top = 21.0
margin_right = 236.0
margin_bottom = 29.0

[node name="ModuleRequirements" type="Label" parent="ScrollContainer/Control/VBoxContainer"]
margin_top = 33.0
margin_right = 236.0
margin_bottom = 50.0
text = "TODO: Requirements"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/Control/VBoxContainer"]
margin_top = 54.0
margin_right = 236.0
margin_bottom = 62.0

[node name="ModuleDefinitions" type="Label" parent="ScrollContainer/Control/VBoxContainer"]
margin_top = 66.0
margin_right = 236.0
margin_bottom = 123.0
text = "Defines:
 - 0
 - 1"

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/Control/VBoxContainer"]
margin_top = 127.0
margin_right = 236.0
margin_bottom = 135.0

[node name="ModuleAssumptions" type="VBoxContainer" parent="ScrollContainer/Control/VBoxContainer"]
margin_top = 139.0
margin_right = 236.0
margin_bottom = 139.0
custom_constants/separation = 3
